Random Color in right panel

--- a/src/ui/pages/Homepage/LeftPanel.scss
+++ b/src/ui/pages/Homepage/LeftPanel.scss
@@ -58,7 +58,8 @@
 
 }
 .quantity-count {
-    width: 1rem;
+    display: inline-block;
+    width: 1.5rem;
     text-align: center;
     border-radius: 5px;
     border: 1px solid;
