--- a/src/ui/styles/_colors.scss
+++ b/src/ui/styles/_colors.scss
@@ -11,3 +11,5 @@ $color-7: #63d1bb;
 
 $btn-red: $color-2;
 $btn-green: $color-3;
+
+$bg-color-list : rgba(245, 138, 84, 0.7), rgba(249, 7, 47, 0.7), rgba(66, 184, 131, 0.7), rgba(62, 100, 255, 0.7), rgba(231, 76, 60, 0.7), rgba(129, 5, 216, 0.7);
